adding in super basic kafka endpoint
